# cmake_example

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/op/: op.c
test/functional/: test.yaml
test/unit/: test.c
